--- a/store_vue/package.json
+++ b/store_vue/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.3",
     "element-plus": "^2.8.0",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
