--- a/store_vue/package.json
+++ b/store_vue/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.8.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "swiper": "^11.1.9",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
