--- a/store_vue/nginx.conf
+++ b/store_vue/nginx.conf
@@ -1,12 +1,22 @@
 server {
     listen 8001;
-    server_name localhost;
+    server_name 192.168.98.86;
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
+	
+	# 將 API 請求代理到 Spring Boot 服務
+	location /app-dev/ {
+		rewrite ^/app-dev/(.*)$ /$1 break;  # 移除 /api/ 前綴
+		proxy_pass http://192.168.98.86:8080;  # Spring Boot 的 API 位址
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+	}
 
     error_page  500 502 503 504 /50x.html;
     location = /50x.html {
